--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<title>一人二狗 A Man a car</title>
+<image src="https://github.com/amancar/amancar.github.io/blob/main/images/my_car.png">
+
 <p>嗨！ 您好~</p>
 <p>很高兴你来到这里, 这里是【一人二狗】的个人主页。</p>
 <p>【一人二狗】将带你720°沉浸式看遍世界各地美景。</p>
