--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <title>一人二狗</title>
 
+<img src="https://raw.githubusercontent.com/amancar/amancar.github.io/main/images/my_car.png" alt="here is the car image named two dog">
+
 <p>嗨！ 您好~</p>
 <p>很高兴你来到这里, 这里是【一人二狗】的个人主页。</p>
 <p>【一人二狗】将带你720°沉浸式看遍世界各地美景。</p>
