--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-
-
-
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="zh">
 
   <head>
     <meta charset='utf-8'>
@@ -48,7 +45,7 @@
           
 
           <h1 id="project_title">一人二狗</h1>
-          <h2 id="project_tagline">A man，a car</h2>
+          <h2 id="project_tagline">A man，a  car</h2>
 
           
         </header>
