--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
 <p>【一人二狗】将带你720°沉浸式看遍世界各地美景。</p>
 
 <hr />
+        
+ <p><img src="https://github.com/amancar/amancar.github.io/blob/main/images/3%E6%9D%A1%E8%BE%B9%E5%A2%83%E7%BA%BF-%E5%9C%B0%E5%9B%BE.jpg?raw=true" alt="中国3条边境线国道" /></p>
+
+<hr />
 
 <p>👉 <a href="https://www.kuleiman.com/159025/index.html">点我看全景：一人二狗, A man a car</a></p>
 
