--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           
 
           <h1 id="project_title">一人二狗</h1>
-          <h2 id="project_tagline">A man a car</h2>
+          <h2 id="project_tagline">A man，a car</h2>
 
           
         </header>
