--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 <p>👉 <a href="https://www.kuleiman.com/159025/index.html">点我看全景：一人二狗, A man a car</a></p>
 
-<p>👉 <a href="https://www.kuleiman.com/159025/index.html">Click Me For Piano：一人二狗, A man a car</a></p>
+<p>👉 <a href="https://www.kuleiman.com/159025/index.html">Click Me for Panorama：一人二狗, A man a car</a></p>
 
 <hr />
 
